--- a/style.css
+++ b/style.css
@@ -157,6 +157,7 @@ header .logo img{
 
 header .navbar a{
    font-size: 1rem;
+   margin-left: 1.4rem;
    color: rgb(255, 115, 0);
    text-shadow: 0 0 10px rgb(0, 0, 0);
 }
