--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ header input{
 }
 
 header label{
-   font-size: 2.3rem;
+   font-size: 2rem;
    color: rgb(0, 0, 0);
    cursor: pointer;
    visibility: hidden;
@@ -358,19 +358,19 @@ header label{
 
 .aprender .columna .suscribete form{
    display: flex;
-      width: 100%;
-      border: .2rem solid white;
-      padding: .5rem;
-      border-radius: 5rem;
-      margin: 1rem auto;
-      height: 5rem;
-      @media screen and (max-width:450px) {
-         display: flex;
-         justify-content: center;
-         align-items: center;
-         height: auto;
-         flex-direction: column;
-      }
+   width: 100%;
+   border: .2rem solid white;
+   padding: .5rem;
+   border-radius: 5rem;
+   margin: 1rem auto;
+   height: 5rem;
+   @media screen and (max-width:450px) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: auto;
+      flex-direction: column;
+   }
 }
 
 .aprender .columna .suscribete form input[ type="email"]{
@@ -528,7 +528,7 @@ header label{
    padding-bottom: 4rem;
 }
 
-.contactos .image{
+/*.contactos .image{
    flex: 1 1 30rem;
    display: flex;
    justify-content: center;
@@ -561,7 +561,7 @@ header label{
             transform: translateX(-10rem);
          }
       }
-}
+}*/
 .contactos form{
    flex: 1 1 40rem;
    padding: 1rem 3rem;
