Cambio footer, eliminacion archivos innecesarios

--- a/style.css
+++ b/style.css
@@ -619,7 +619,7 @@ header label{
 
 .footer{
    padding-top: 3rem;
-   background: url(img/footer/footer3.png) no-repeat;
+   background: url(img/footer/footer.png) no-repeat;
    background-size: cover;
    background-position: center;
 }
