--- a/style.css
+++ b/style.css
@@ -337,7 +337,7 @@ header label{
    flex-direction: column;
    box-sizing: border-box;
    text-align: center;
-   padding: 3.5rem 1rem 1rem 1rem;
+   padding: 1rem;
    /*background: url(img/fondo_sub.png);*/
    background-size: cover;
    background-position: center;
@@ -345,13 +345,13 @@ header label{
 
 .aprender .columna .suscribete h3{
    color: aliceblue;
-   font-size: 1.8rem;
+   font-size: 1.5rem;
    text-transform: uppercase;
 }
 
 .aprender .columna .suscribete p{
    color: antiquewhite;
-   font-size: 1.2rem;
+   font-size: 1rem;
    margin: 1rem auto;
    width: auto;
 }
@@ -391,7 +391,7 @@ header label{
    background: white;
    width: auto;
    padding: .5rem 1rem;
-   font-size: 1.7rem;
+   font-size: 1.3rem;
    border-radius: 5rem;
    cursor: pointer;
 }
@@ -443,9 +443,9 @@ header label{
    transform: scale(1.2);
 }
 .coleccion .caja-contenedor .caja .comentarios h3{
-   margin-top: 1rem;
    color: var(--morado);
    font-size: 2rem;
+   padding-bottom: .5rem;
 }
 
 .coleccion .caja-contenedor .caja .comentarios{
@@ -454,7 +454,7 @@ header label{
 
 .coleccion .caja-contenedor .comentarios{
    color: black;
-   font-size: 1.2rem;
+   font-size: 1rem;
    padding: 1rem;
 }
 .coleccion .caja-contenedor .bottons a:last-child {
@@ -486,30 +486,30 @@ header label{
 
 .clases .caja-contenedor .caja .titulo{
    color: rgb(0, 0, 0);
-   font-size: 2rem;
+   font-size: 1.5rem;
    padding-top: 1rem;
    text-shadow: 0 0 10px rgb(255, 123, 0);
 }
 
 .clases .caja-contenedor .caja .tipos{
-   font-size: 2.6rem;
+   font-size: 2rem;
    color: var(--morado);
-   padding: 1rem 0;
+   padding: .6rem 0;
 }
 
 .clases .caja-contenedor .caja .tipos span{
-   font-size: 1.2rem;
+   font-size: 1rem;
 }
 
 .clases .caja-contenedor .caja ul{
-   padding: 1rem 0;
+   padding: .5rem 0;
    list-style: none;
 }
 
 .clases  .caja-contenedor .caja ul li{
-   font-size: 1.3rem;
+   font-size: 1rem;
    color: rgb(255, 255, 255);
-   padding: .5rem 0;
+   padding: .4rem 0;
 }
 
 .clases .caja-contenedor .caja ul li .fa-square-check{
@@ -563,7 +563,7 @@ header label{
       }
 }*/
 .contactos form{
-   flex: 1 1 40rem;
+   flex: 1 1 30rem;
    padding: 1rem 3rem;
    border: .1rem solid rgb(0, 0, 0, .2);
    box-shadow: 0 .5rem rgb(0, 0, 0, .1);
@@ -680,7 +680,7 @@ header label{
 }
 
 .footer .creditos{
-   font-size: 1rem;
+   font-size: .8rem;
    font-family: normal;
    letter-spacing: .1rem;
    color: rgb(255, 255, 255);
