--- a/style.css
+++ b/style.css
@@ -571,15 +571,31 @@ header label{
    position: relative;
 }
 
+.contactos form .inputcaja i {
+   display: none;
+   position: absolute;
+   color: red;
+   top: 1.5rem;
+   right: 0;
+   z-index: 10;
+}
+
+.contactos form .inputcaja p {
+   display: none;
+   color: grey;
+   font-size: .7rem;
+   padding-top: 0%;
+   margin-top: 0;
+}
+
 .contactos form .inputcaja input, .contactos form .inputcaja textarea{
    width: 100%;
    color: black;
    margin: 1rem 0;
    padding: .5rem 0;
    font-size: 1rem;
-   border-bottom: .1rem solid rgb(0, 0, 0, .1);
+   border-bottom: .1rem solid rgb(0, 0, 0, .2);
    text-transform: none;
-
 }
 
 .contactos form .inputcaja textarea{
